--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,13 +5,20 @@ phases:
     runtime-versions:
       nodejs: 18
     commands:
+      - echo "Moving to frontend/"
+      - cd frontend
+      - pwd
+      - ls -la
       - npm install
 
   build:
     commands:
+      - echo "Building React App"
+      - cd frontend
       - npm run build
-      - cp appspec.yml build/
-      - cp -r scripts build/
+      - echo "📦 Preparing artifacts"
+      - cp ../appspec.yml build/
+      - cp -r ../scripts build/
       - cd build && zip -r ../../build.zip .
 
 artifacts:
