--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
     runtime-versions:
       nodejs: 20 
     commands:
-      - echo "Cleaning & installing frontend dependencies"
+      - echo "Installing dependencies"
       - cd frontend
       - rm -rf node_modules package-lock.json
       - npm install
@@ -14,7 +14,7 @@ phases:
     commands:
       - echo "Building React app"
       - npm run build
-      - echo "Copying deploy configs"
+      - echo "Packaging deployment"
       - cp ../appspec.yml build/
       - cp -r ../scripts build/
       - cd build && zip -r ../../build.zip .
