--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,17 +7,17 @@ phases:
     commands:
       - echo "Installing dependencies"
       - cd frontend
-      - rm -rf node_modules package-lock.json
       - npm install
 
   build:
     commands:
       - echo "Building React app"
       - npm run build
-      - echo "Packaging deployment"
+      - echo "Copying appspec & scripts"
       - cp ../appspec.yml build/
       - cp -r ../scripts build/
-      - cd build && zip -r ../../build.zip .
+      - cd build
+      - zip -r ../build.zip .
 
 artifacts:
   files:
