--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,9 +3,9 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 20 
+      nodejs: 20
     commands:
-      - echo "Installing dependencies"
+      - echo "Installing frontend dependencies"
       - cd frontend
       - npm install
 
@@ -13,11 +13,12 @@ phases:
     commands:
       - echo "Building React app"
       - npm run build
-      - echo "Copying appspec & scripts"
-      - cp ../appspec.yml build/
-      - cp -r ../scripts build/
-      - cd build
-      - zip -r ../build.zip .
+      - echo "Preparing deploy package"
+      - mkdir -p ../package
+      - cp -r build/* ../package/
+      - cp ../appspec.yml ../package/
+      - cp -r ../scripts ../package/
+      - cd ../package && zip -r ../build.zip .
 
 artifacts:
   files:
