--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,21 +3,21 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 20
+      nodejs: 20 
     commands:
-      - echo "Installing frontend dependencies"
+      - echo "Cleaning & installing frontend dependencies"
       - cd frontend
+      - rm -rf node_modules package-lock.json
       - npm install
 
   build:
     commands:
       - echo "Building React app"
       - npm run build
-      - echo "Copying deployment configs"
+      - echo "Copying deploy configs"
       - cp ../appspec.yml build/
       - cp -r ../scripts build/
-      - cd build
-      - zip -r ../../build.zip .
+      - cd build && zip -r ../../build.zip .
 
 artifacts:
   files:
