--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,32 +9,27 @@ phases:
       - echo "Installing frontend dependencies"
       - cd frontend
       - npm install
-      - cd ..
   build:
     commands:
       - echo "Building React app"
       - cd frontend
       - npm run build
-      - cd ..
-
-      - echo "Creating deployment package"
-      # Create a clean directory to stage the files for zipping
-      - mkdir deployment_package
-
-      # Copy the necessary files into the staging directory
-      - cp -r frontend/build/* deployment_package/
-      - cp appspec.yml deployment_package/
-      - cp -r scripts/ deployment_package/
-
-      # --- This is a debug step to see the structure in CodeBuild logs ---
-      - echo "Verifying contents of the deployment package:"
-      - ls -R deployment_package/
-
-      # Create the final zip file from the contents of the staging directory
-      - cd deployment_package
-      - zip -r ../build.zip .
-      - cd ..
-
-artifacts:
-  files:
-    - build.zip
+  post_build:
+    commands:
+      - echo "Deploying to EC2 instance..."
+      - ARTIFACT_NAME=$(date +%s)-build.zip
+      - cd build && zip -r ../$ARTIFACT_NAME . && cd ..
+      - aws s3 cp $ARTIFACT_NAME s3://$S3_BUCKET/$ARTIFACT_NAME
+      - >
+        aws ssm send-command
+        --instance-ids "$INSTANCE_ID"
+        --document-name "AWS-RunShellScript"
+        --parameters 'commands=[
+          "#!/bin/bash",
+          "set -e",
+          "if ! rpm -q nginx > /dev/null; then yum install -y nginx; systemctl enable nginx; fi",
+          "aws s3 cp s3://$S3_BUCKET/'$ARTIFACT_NAME' /tmp/'$ARTIFACT_NAME'",
+          "rm -rf /usr/share/nginx/html/*",
+          "unzip /tmp/'$ARTIFACT_NAME' -d /usr/share/nginx/html",
+          "systemctl restart nginx"
+        ]'
