--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,9 @@
 version: 0.2
 
 phases:
+  install:
+    runtime-versions:
+      nodejs: 20
   build:
     commands:
       - echo "Navigating to frontend and building..."
@@ -11,19 +14,19 @@ phases:
     commands:
       - echo "Deploying to EC2 instance..."
       - ARTIFACT_NAME=$(date +%s)-build.zip
-      - cd build && zip -r ../$ARTIFACT_NAME . && cd ..
+      - cd frontend/build && zip -r ../../$ARTIFACT_NAME . && cd ../..
       - aws s3 cp $ARTIFACT_NAME s3://$S3_BUCKET/$ARTIFACT_NAME
       - >
         aws ssm send-command
         --instance-ids "$INSTANCE_ID"
         --document-name "AWS-RunShellScript"
-        --parameters 'commands=[
-          "#!/bin/bash",
-          "set -e",
-          "if ! rpm -q nginx > /dev/null; then yum install -y nginx; systemctl enable nginx; fi",
-          "aws s3 cp s3://$S3_BUCKET/'$ARTIFACT_NAME' /tmp/'$ARTIFACT_NAME'",
-          "rm -rf /usr/share/nginx/html/*",
-          "unzip -o /tmp/'$ARTIFACT_NAME' -d /usr/share/nginx/html",
-          "rm /tmp/'$ARTIFACT_NAME'",
-          "systemctl restart nginx"
-        ]'
+        --parameters "commands=[
+          \"#!/bin/bash\",
+          \"set -e\",
+          \"if ! rpm -q nginx > /dev/null; then yum install -y nginx; systemctl enable nginx; fi\",
+          \"aws s3 cp s3://$S3_BUCKET/$ARTIFACT_NAME /tmp/$ARTIFACT_NAME\",
+          \"rm -rf /usr/share/nginx/html/*\",
+          \"unzip -o /tmp/$ARTIFACT_NAME -d /usr/share/nginx/html\",
+          \"rm /tmp/$ARTIFACT_NAME'\",
+          \"systemctl restart nginx\"
+        ]"
