--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,4 +56,9 @@ jobs:
       - name: Configure Kubectl
         run: aws eks update-kubeconfig --name testing-cluster --region ap-south-1
       
-      -
+      - name: Deploy to EKS
+        run: |
+          kubectl apply -f k8s/my-sealed-secret.yaml
+          sed -i 's|IMAGE_PLACEHOLDER|${{ steps.build-image.outputs.image }}|g' k8s/deployment.yaml
+          kubectl apply -f k8s/deployment.yaml
+          kubectl apply -f k8s/service.yaml
