--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,12 +26,9 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      # ---- CORRECTED SECTION ----
-      # Step 1: Build the image with a temporary tag for scanning
       - name: Build Docker image for Trivy scan
         run: docker build -t scan-image:latest .
 
-      # Step 2: Scan the locally built image using Trivy
       - name: Scan image with Trivy
         uses: aquasecurity/trivy-action@master
         with:
@@ -58,7 +55,7 @@ jobs:
       
       - name: Deploy to EKS
         run: |
-          kubectl apply -f k8s/my-sealed-secret.yaml
-          sed -i 's|IMAGE_PLACEHOLDER|${{ steps.build-image.outputs.image }}|g' k8s/deployment.yaml
-          kubectl apply -f k8s/deployment.yaml
-          kubectl apply -f k8s/service.yaml
+          kubectl apply -f k8s/my-sealed-secret.yml
+          sed -i 's|IMAGE_PLACEHOLDER|${{ steps.build-image.outputs.image }}|g' k8s/deployment.yml
+          kubectl apply -f k8s/deployment.yml
+          kubectl apply -f k8s/service.yml
